--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -794,6 +794,7 @@
             <a href="imperialbasedfrictionfactor.html" class="calculator-btn">Friction Factor Calculator (Imperial-Based)</a>
 
              <a href="reynoldnumber.html" class="calculator-btn">Friction Factor Calculator (Reynolds-Number)</a>
+             <a href="fractureconductivity.html" class="calculator-btn">Fracture Conductivity Calculator</a>
 
             <a href="heattransferthermoflow.html" class="calculator-btn">Heat Transfer Thermo Flow Calculator</a>
             <a href="heattransfersteam.html" class="calculator-btn">Heat Transfer Rate Calculator (Condensing Steam)</a>
@@ -805,7 +806,6 @@
             <a href="todeterminekinematicviscocityoffluid.html" class="calculator-btn">Kinematic Viscosity Calculator</a>
             
             <a href="logmeantemperaturedifference.html" class="calculator-btn">Log Mean Temperature Difference (LMTD) Calculator</a>
-            <a href="flowratevspressureloss.html" class="calculator-btn">Liquid Flow Rate vs. Pressure Drop Calculator</a>
             <a href="Mean Steam Consumption Rate (ṁₛ) for a flow-type application.html" class="calculator-btn">Mean Steam Consumption Rate for a Flow-Type Application caluculator (1)</a>
             <a href="meansteamconsumption.html" class="calculator-btn">Mean Steam Consumption Of A Flow-Type Application Calculator (2)</a>
             <a href="meanstreamflowratetoastoragecalorifier.html" class="calculator-btn">Mean Steam Flow Rate To A Storage Calorifier Calculator</a>
@@ -838,6 +838,7 @@
                    <a href="secondaryfluidinlettemperatureatanyload.html" class="calculator-btn">Secondary Fluid Inlet Temperature At Any Load Calculator</a>
                    <a href="thesecondaryinlettemprature.html" class="calculator-btn">Secondary Inlet Temperature At Any Load Calculator</a>
                    <a href="calculatingthestallloadwithavaraibleflow.html" class="calculator-btn">Stall Load For A Variable Flow Secondary Calculator</a>
+
 
             
             <a href="thermodynamiccal.html" class="calculator-btn">Thermodynamic Temperature Calculator</a>
