--- a/foldofincrease.html
+++ b/foldofincrease.html
@@ -178,7 +178,7 @@ strong{
 }
 
 .feedback-table th {
-    background-color: #1b00cb;
+    background-color: #1560bd;
     color: white;
     font-weight: bold;
 }
