--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -772,6 +772,7 @@
 
             <a href="electricalresidenceofaconductivityprobe.html" class="calculator-btn">Electrical Resistance Calculator For Conductivity Probe</a>
             <a href="firstpassyieldcal.html" class="calculator-btn">First Pass Yield (FPY) Calculator</a>
+            <a href="foldofincrease.html" class="calculator-btn">Fold of Increase Calculator</a>
 
             <a href="heatexchangerheatingarea.html" class="calculator-btn">Heat Exchanger Heating Area Calculator</a>
             <a href="largestparticlesizethroughastrainerscreen.html" class="calculator-btn">Largest Particle Size Through a Strainer Screen Calculator</a>
@@ -797,6 +798,7 @@
             <a href="todeterminedensityofsteam.html" class="calculator-btn">Steam Density Calculator (Using Dryness Fraction)</a>
             <a href="statisticalprocesscontrolchat.html" class="calculator-btn">Statistical Process Control (SPC) Chart Calculator</a>
             <a href="secondaryfluidoutlettemperatureatanyload.html" class="calculator-btn">Secondary Fluid Outlet Temperature At Any Load Calculator</a>
+            <a href="standardminutevalvesmv.html" class="calculator-btn">Standard Minute Value (SMV) Calculator</a>
 
 
             <a href="turndownratioofasteamflowmeter.html" class="calculator-btn">Turndown Ratio Of A Steam Flowmeter Calculator</a>
