--- a/fractureconductivity.html
+++ b/fractureconductivity.html
@@ -232,7 +232,7 @@ strong{
     </div>
 
     <button class="cal-btn" onclick="calculateConductivity()">Calculate Conductivity</button>
-    <p class="result">Fracture Conductivity: <span id="result">-</span></p>
+<div class="result" id="result"></div>
     <span class="feedback" id="feedbackResult"></span>
     
 </div>
@@ -298,7 +298,7 @@ strong{
 
         // Formula: F_CD = (kf * wf) / (ke * xf)
         let F_CD = (kf * wf) / (ke * xf);
-        result.innerHTML = F_CD.toFixed(4);
+        result.innerHTML = `Fracture Conductivity = ${F_CD.toFixed(4)}`;
 
         feedbackResult.innerHTML = "Fracture conductivity calculated successfully. Ensure values are realistic for optimal well performance.";
     }
