liquid calcualtor missed now added

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -804,6 +804,10 @@
 
 
             <a href="todeterminekinematicviscocityoffluid.html" class="calculator-btn">Kinematic Viscosity Calculator</a>
+            <a href="logmeantemperaturedifference.html" class="calculator-btn">Log Mean Temperature Difference (LMTD) Calculator</a>
+            <a href="flowratevspressureloss.html" class="calculator-btn">Liquid Flow Rate vs. Pressure Drop Calculator</a>
+
+
             
             <a href="Mean Steam Consumption Rate (ṁₛ) for a flow-type application.html" class="calculator-btn">Mean Steam Consumption Rate for a Flow-Type Application caluculator (1)</a>
             <a href="meansteamconsumption.html" class="calculator-btn">Mean Steam Consumption Of A Flow-Type Application Calculator (2)</a>
