new 15 calcualtors added

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -771,6 +771,9 @@
             <a href="costofeffluent.html" class="calculator-btn">Cost of Effluent Saved by Returning Condensate Calculator</a>
 
 
+<a href="corrosionrate.html" class="calculator-btn">Corrosion Rate Calculator</a>
+
+
 
             <a href="todeterminetheabsoulteordynamicofafluid.html" class="calculator-btn">Dynamic Viscosity Calculator</a>
             
@@ -814,6 +817,8 @@
             <a href="meanstreamflowratetoastoragecalorifier.html" class="calculator-btn">Mean Steam Flow Rate To A Storage Calorifier Calculator</a>
             <a href="maximumallowconcentration.html" class="calculator-btn">Maximum Allowable Concentration (MAC) Calculator</a>
             <a href="todeterminemassflowratefromvolumetricflowrate.html" class="calculator-btn">Mass Flow Rate from volumetric flowrate Calculator</a>
+            <a href="metalloss.html" class="calculator-btn">Metal Loss Calculator</a>
+
             <a href="pressuredropacrossavalveinaliquidsteam.html" class="calculator-btn">Pressure Drop Across a Valve In A Liquid Calculator</a>
 
             
