--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -759,6 +759,13 @@
             <input type="text" id="searchBar" class="form-control custom-search" placeholder="🔍 Search Calculator..." onkeyup="filterCalculators()">
         </div>
         <div class="button-container" id="calculatorList">
+            <a href="armybodyfatcalcualtor.html" class="calculator-btn">Army Body Fat Calculator</a>
+            <a href="adjustedbodyweightcalculator.html" class="calculator-btn">Adjusted Body Weight Calculator</a>
+
+
+
+            <a href="absicalcualtor.html" class="calculator-btn">A Body Shape Index (ABSI) Calculator</a>
+
             <a href="bmicalculator.html" class="calculator-btn">BMI Calculator</a>
             <a href="bmrcalculator.html" class="calculator-btn">Basal Metabolic Rate (BMR) Calculator</a>
             <a href="bodyfatcalcualtor.html" class="calculator-btn">Body Fat Calculator (U.S. Navy Method)</a>
