--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -885,6 +885,8 @@
             <a href="loadperlegcal.html" class="calculator-btn">Load Distribution Per Leg</a>
             <a href="leadingsafetyindicator.html" class="calculator-btn">Leading Safety Indicators</a>
             <a href="losttimecaserate.html" class="calculator-btn">Lost Time Case Rate (LTC) Calculator</a>
+            <a href="ltcr.html" class="calculator-btn">Long-Term Corrosion Rate (LTCR) Calculator</a>
+
 
 
             <a href="mudweightcalcualtor.html" class="calculator-btn">Mud Weight (Density) Calculator</a>
@@ -927,6 +929,11 @@
             <a href="safetyvalveforce.html" class="calculator-btn">Required Opening Force For A Balanced Safety Valve  Calculator</a>
 
             <a href="reactionforceattheendofsafetyvalveventpipe.html" class="calculator-btn">Reaction Force at the end of Safety Valve Calculator</a>
+
+            <a href="remaininglife.html" class="calculator-btn">Remaining Corrosion Life Calculator</a>
+
+<a href="remainingcorrosionallowance.html" class="calculator-btn">Remaining Corrosion Allowance Calculator</a>
+
 
 
 
