--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -760,22 +760,32 @@
 
             <a href="boilerhorsepowerfromheattransfersrea.html" class="calculator-btn">Boiler Horse Power From Heat Transfer Area Calculator</a>
             <a href="binomialdistributioncal.html" class="calculator-btn">Binomial Distribution Calculator</a>
+            <a href="broadcalculationofgarments.html" class="calculator-btn">Broad Calculation of Garments Cost of Making (CM) </a>
 
 
             <a href="correcttheconductivityofasample.html" class="calculator-btn">Correct The Conductivity Of A Sample Calculator</a>
             <a href="costofpoorqualitycalculator.html" class="calculator-btn">Cost of Poor Quality (COPQ) Calculator</a>
+            <a href="customersatisfaction.html" class="calculator-btn">Customer Satisfaction (CSAT) Calculator</a>
+            <a href="costperminute.html" class="calculator-btn">Cost Per Minute (CPM) Calculator </a>
+            <a href="costofmaking.html" class="calculator-btn">Cost of Making (CM) Calculator </a>
+
+
 
             <a href="defectspermillionopportunities.html" class="calculator-btn">Defects Per Million Opportunities (DPMO) and Six Sigma  Calculator</a>
+            <a href="defectratecalcualtor.html" class="calculator-btn">Defect Rate Calculator</a>
+
 
             <a href="directionalsurvey.html" class="calculator-btn">Directional Survey Calculator</a>
             <a href="evaporationfactorofaboilerfromitsfromandatrating.html" class="calculator-btn">Evaporation Factor Of A Boiler From Its 'From & At' Rating Calculator</a>
 
             <a href="electricalresidenceofaconductivityprobe.html" class="calculator-btn">Electrical Resistance Calculator For Conductivity Probe</a>
+        
             <a href="firstpassyieldcal.html" class="calculator-btn">First Pass Yield (FPY) Calculator</a>
             <a href="foldofincrease.html" class="calculator-btn">Fold of Increase Calculator</a>
 
             <a href="heatexchangerheatingarea.html" class="calculator-btn">Heat Exchanger Heating Area Calculator</a>
             <a href="largestparticlesizethroughastrainerscreen.html" class="calculator-btn">Largest Particle Size Through a Strainer Screen Calculator</a>
+            <a href="linetarget.html" class="calculator-btn">Line Target Calculator </a>
 
             <a href="MassFlowRateofSteamThroughanOrifice.html" class="calculator-btn">Mass Flow Rate Of Steam Through An Orifice Calculator</a>
             <a href="overalleqipmenteffectivenes.html" class="calculator-btn">Overall Equipment Effectiveness (OEE) Calculator</a>
@@ -784,6 +794,8 @@
             <a href="percentageerrorwhenusingapressure.html" class="calculator-btn">Percentage Error when using pressure Calculator</a>
             <a href="thepressuredropforaliquidequalsthefrictionloss.html" class="calculator-btn">Pressure Drop & Friction Loss Calculator</a>
             <a href="processcapabilitycpcpk.html" class="calculator-btn"> Process Capability (Cp, Cpk) Calculator</a>
+            <a href="efficiency.html" class="calculator-btn">Production Efficiency Calculator</a>
+
 
 
             <a href="relatingboilerpressuretoheattransferrate.html" class="calculator-btn">Relating Boiler Pressure To Heat Transfer Rate Calculator</a>
