new 15 calcualtors added in health ,safety and fire

--- a/firesubcalculators.html
+++ b/firesubcalculators.html
@@ -784,6 +784,7 @@
             <a href="firealaramsystemsecondbattery.html" class="calculator-btn"> Fire Alarm  System Secondary Battery -Set Calculation</a>
             <a href="fireoccupancylimit.html" class="calculator-btn"> Fire Safety Occupancy Calculator For Assembly and Recreation Limit</a>
             <a href="flamablerange.html" class="calculator-btn">Flammable Range Calculator</a>
+            <a href="flammabilityforgasmixtures.html" class="calculator-btn">Flammability Calculator for Gas Mixtures</a>
 
 
 
@@ -795,8 +796,10 @@
             <a href="heattransferconnection.html" class="calculator-btn">Heat Transfer By Convection (Newton's Law) Calculator</a>
             
             <a href="heatdetectorresponsetimecalculator.html" class="calculator-btn">Heat Detector Response Time Calculator</a>
+            <a href="lowerflammabilitylimitcharliesrule.html" class="calculator-btn">Lower Flammability Limit (LFL) for Mixtures of Flammable Gases (Le Chatelier’s Rule) Calculator</a>
 
             <a href="modifiedquantitycalculator.html" class="calculator-btn">Modified CO₂ Quantity Calculator</a>
+            <a href="nitrogenequivalency.html" class="calculator-btn">Nitrogen Equivalency (Kik) Calculator</a>
             <a href="pressurefactor.html" class="calculator-btn">Pressure Factor Calculator</a>
 
             
