--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -799,6 +799,7 @@
 
             <a href="bitwearefficiencycal.html" class="calculator-btn">Bit Wear and Efficiency Calculator</a>
             <a href="bernoullisequationmultipliedthroughoutbypg.html" class="calculator-btn">Bernoulli's Equation Multiplied Throughout by 'pg' Calculator</a>
+            <a href="boylesventarea.html" class="calculator-btn">Boyle's Vent Area Calculator</a>
             <a href="changeinentropycal.html" class="calculator-btn">Change in Entropy Calculator</a>
             <a href="costofaccident.html" class="calculator-btn">Cost of Accident Calculator</a>
             <a href="casingburstpressurecalculator.html" class="calculator-btn">Casing Burst Pressure Calculator</a>
@@ -991,6 +992,7 @@
 <a href="valveclosingforce.html" class="calculator-btn">Valve Closing Force Calculator</a>
 <a href="volumetricflowofwaterthroughavalve.html" class="calculator-btn">Volumetric Flow Of Water Through A Valve Calculator</a>
 <a href="valveauthority.html" class="calculator-btn">Valve Authority Calculator</a>
+<a href="ventingtime.html" class="calculator-btn">Venting Time Calculator</a>
 
 
             <a href="wireropecal.html" class="calculator-btn">Wire Rope Grips Calculator</a>
